# rust-react-typescript-demo

./: .dockerignore  .travis.yml  Dockerfile  README.md  entrypoint.sh  k8s.yaml  nginx.conf
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: node.js.yml  rust.yml
foodi-backend/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  database.sqlite-shm  database.sqlite-wal  sample-database.sqlite
foodi-backend/migrations/: 20221017165648_meals.up.sql
foodi-backend/migrations/2019-01-20-222146_meals/: down.sql  up.sql
foodi-backend/src/: main.rs  models.rs  schema.rs
foodi-frontend/: .babelrc  .eslintrc.js  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
foodi-frontend/src/: api.ts  app.tsx  index.html  main.tsx  tachyons.css
foodi-frontend/src/meals/: controller.ts  form.tsx  meal.ts  meals.css  model.ts  state.ts  view.tsx
terraform/: main.tf  provider.tf
