[package]
name = "foodi-backend"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_cors = "0.5.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_sqlite_pool", "json"]
