[package]
name = "foodi-backend"
version = "0.2.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2021"

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", default-features = false }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-rustls",
    "migrate",
    "macros",
    "chrono",
] }

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
